--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banff: Personal site and Portfolio</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
     <h1>Banff</h1> 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam cupiditate optio quia tenetur enim, numquam quo cum non magnam dolorem aspernatur nihil voluptates quibusdam ratione eveniet, sunt beatae illo commodi!</p>   
+    <img src = "images/photo.jpeg" alt = "Sunset during trip to Hawaii this summer" />
 </body>
 </html>
