--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
     <h1>Contacts</h1>
 
     <form action = "mailto:bxjiang@ucsd.edu" method = "Post" enctype = "text/plain">
-        <label for = "Email">bxjiang@ucsd.edu</label>
+        <label for = "Email">Email:</label>
         <input type = "Email" id = "Email" name = "Email" required>
         <br>
 
