fixed typo again

--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@
         <a href = "https://github.com/banffjiang" target = "_blank">Github</a>
     </nav>
 
-    <h1>Contacts</h1>
+    <h1>Contact Me</h1>
 
     <form action = "mailto:bxjiang@ucsd.edu" method = "Post" enctype = "text/plain">
         <label for = "Email">Email:</label>
