updated index.html instead of latin

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <h1>Banff</h1> 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam cupiditate optio quia tenetur enim, numquam quo cum non magnam dolorem aspernatur nihil voluptates quibusdam ratione eveniet, sunt beatae illo commodi!</p>   
+    <h1>Banff Jiang</h1> 
+    <p>Welcome to my page! I am currently a third year at the University of California, San Diego, studying Data Science.</p>   
     <img src = "images/photo.jpeg" alt = "Sunset during trip to Hawaii this summer" />
 </body>
 </html>
