added cv nav to all index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
+    <nav>
+        <a href = "index.html"> Home</a>
+        <a href = "../projects/index.html"> Projects</a>
+        <a href = "../contact/index.html">Contact</a>
+        <a href="../cv/index.html">CV</a>
+        <a href = "https://github.com/banffjiang" target = "_blank">Github</a>
+    </nav>
     <h1>Banff Jiang</h1> 
     <p>Welcome to my page! I am currently a third year at the University of California, San Diego, studying Data Science.</p>   
     <img src = "images/photo.jpeg" alt = "Sunset during trip to Hawaii this summer" />
