--- a/projects/index.html
+++ b/projects/index.html
@@ -11,6 +11,7 @@
         <a href = "../index.html"> Home</a>
         <a href = "index.html"> Projects</a>
         <a href = "../contact/index.html">Contact</a>
+        <a href="../cv/index.html">CV</a>
         <a href = "https://github.com/banffjiang" target = "_blank">Github</a>
     </nav>
     <h1>My Projects</h1>
