--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <a href = "index.html"> Home</a>
-        <a href = "../projects/index.html"> Projects</a>
-        <a href = "../contact/index.html">Contact</a>
-        <a href="../cv/index.html">CV</a>
+        <a href = "projects/index.html"> Projects</a>
+        <a href = "contact/index.html">Contact</a>
+        <a href = "cv/index.html">CV</a>
         <a href = "https://github.com/banffjiang" target = "_blank">Github</a>
     </nav>
     <h1>Banff Jiang</h1> 
