--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banff: Personal site and Portfolio</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="global.js" type="module"></script>
 </head>
 <body>
-    <nav>
-        <a href = "index.html"> Home</a>
-        <a href = "projects/index.html"> Projects</a>
-        <a href = "contact/index.html">Contact</a>
-        <a href = "cv/index.html">CV</a>
-        <a href = "https://github.com/banffjiang" target = "_blank">Github</a>
-      </nav>
-      
-    <h1>Banff Jiang</h1> 
-    <p>Welcome to my page! I am currently a third year at the University of California, San Diego, studying Data Science.</p>   
-    <img src = "images/photo.jpeg" alt = "Sunset during trip to Hawaii this summer" />
+    <header></header>
+    
+    <main>
+        <h1>Banff Jiang</h1> 
+        <p>Welcome to my page! I am currently a third year at the University of California, San Diego, studying Data Science.</p>   
+        <img src="images/photo.jpeg" alt="Sunset during trip to Hawaii this summer" />
+    </main>
 </body>
 </html>
