--- a/projects/index.html
+++ b/projects/index.html
@@ -9,13 +9,10 @@
 
 </head>
 <body>
-    <nav>
-        <a href = "../index.html"> Home</a>
-        <a href = "index.html"> Projects</a>
-        <a href = "../contact/index.html">Contact</a>
-        <a href="../cv/index.html">CV</a>
-        <a href = "https://github.com/banffjiang" target = "_blank">Github</a>
-    </nav>
+    <header></header>
+
+    </main>
+    
     <h1>My Projects</h1>
     <div class="projects">
         <article>
@@ -80,7 +77,6 @@
         </article>
     </div>
 
-
-    
+    </main>
 </body>
 </html>
