--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         <h1>Banff Jiang</h1> 
         <p>Welcome to my page! I am currently a third year at the University of California, San Diego, studying Data Science.</p>   
         <img src="images/photo.jpeg" alt="Sunset during trip to Hawaii this summer" />
+
+        <form>
+            <label class="color-scheme">
+                Select color scheme:
+                <select id="color-scheme-select">
+                    <option value="auto" selected>Automatic</option>
+                    <option value="light">Light</option>
+                    <option value="dark">Dark</option>
+                </select>
+            </label>
+        </form>
     </main>
 </body>
 </html>
