--- a/projects/index.html
+++ b/projects/index.html
@@ -78,6 +78,17 @@
         </article>
     </div>
 
+    <form>
+        <label class="color-scheme">
+            Select color scheme:
+            <select id="color-scheme-select">
+                <option value="auto" selected>Automatic</option>
+                <option value="light">Light</option>
+                <option value="dark">Dark</option>
+            </select>
+        </label>
+    </form>
+
     </main>
 </body>
 </html>
