--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banff: Personal site and Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script src="global.js" type="module"></script>
+    <script src="/portfolio/global.js" type="module"></script>
 </head>
 <body>
     <header></header>
