--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banff: Personal site and Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script src="/portfolio/global.js" type="module"></script>
+    <script src="global.js" type="module"></script>
 </head>
 <body>
     <header></header>
@@ -15,8 +15,6 @@
         <h1>Banff Jiang</h1> 
         <p>Welcome to my page! I am currently a third year at the University of California, San Diego, studying Data Science.</p>   
         <img src="images/photo.jpeg" alt="Sunset during trip to Hawaii this summer" />
-
-     
     </main>
 </body>
 </html>
