--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,8 @@
     <title>Projects</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../global.js" type="module"></script>
+    <script src="projects.js" type="module"></script>
+
 
 </head>
 <body>
@@ -16,66 +18,7 @@
 
     <h1>My Projects</h1>
     <div class="projects">
-        <article>
-            <h2>Lorem ipsum dolor sit.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat rem repellendus ratione suscipit nihil debitis, vitae nostrum in blanditiis perspiciatis. Perferendis, dolores non enim maiores ipsum reiciendis quos debitis exercitationem?</p>
-        </article>
-        <article>
-            <h2>Deserunt amet inventore facere?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Vero saepe modi autem consequatur rerum ratione, mollitia quia et dolorum excepturi quibusdam obcaecati. A voluptate enim ab similique beatae possimus nulla, cumque nam sint. Ducimus error facere modi dolores?</p>
-        </article>
-        <article>
-            <h2>Earum, aliquid corporis? Veritatis.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Tempore soluta ipsam similique debitis laborum necessitatibus! Libero, voluptatum? Hic consequuntur quibusdam odit. Ratione odio adipisci molestiae dolorem. Cupiditate veritatis, molestias deleniti explicabo eius aut aspernatur sapiente earum praesentium maxime.</p>
-        </article>
-        <article>
-            <h2>Quae debitis ex voluptatem!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Mollitia eos accusantium maiores reiciendis ad aspernatur voluptate dolore iure perspiciatis veritatis quia, pariatur unde vitae quae laudantium asperiores fuga? Asperiores sapiente possimus cum! Nobis eum quisquam natus inventore soluta?</p>
-        </article>
-        <article>
-            <h2>Error quia tempora iusto!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Perspiciatis rem optio, ea, reiciendis est corrupti pariatur qui dolorum accusantium animi commodi, recusandae consequuntur cumque vel ducimus iste? Ipsum ullam ea inventore consectetur enim! Ullam doloribus dignissimos vel dolore!</p>
-        </article>
-        <article>
-            <h2>Ab architecto natus soluta?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Excepturi soluta deserunt adipisci numquam impedit corporis atque eum placeat sed, tenetur, in error cum dolorem voluptatem? Odio voluptate expedita atque dolorem, quas reprehenderit sunt accusamus commodi assumenda veritatis recusandae!</p>
-        </article>
-        <article>
-            <h2>Similique at vitae nemo!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Optio iusto ut quidem, nesciunt quis delectus, saepe excepturi ab aliquid veniam eligendi ipsam. Eos iste quaerat unde repellat error tenetur odio minima veritatis! Iure id at possimus commodi hic!</p>
-        </article>
-        <article>
-            <h2>Ipsam qui dolore perspiciatis.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Voluptates cupiditate, alias eius eos rem reprehenderit ipsam. Corporis voluptate tempore doloremque, dolorum sed culpa natus blanditiis deserunt, illum ad amet ratione ipsum at voluptatibus quaerat, excepturi distinctio exercitationem quas.</p>
-        </article>
-        <article>
-            <h2>Ipsum numquam amet facere!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Blanditiis temporibus laudantium est ipsam quis asperiores tenetur officia quibusdam dolorem placeat eligendi fugit totam reprehenderit labore cum atque debitis animi, ratione repudiandae ea minus quia molestias odit laboriosam. Doloremque.</p>
-        </article>
-        <article>
-            <h2>Repellendus libero alias odio.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Deleniti aspernatur distinctio doloribus. Expedita facere ratione debitis voluptates eius vel ipsam quibusdam accusantium itaque, dicta hic rerum enim. Quae doloremque ipsum rem alias eum reprehenderit, nostrum quo dicta commodi?</p>
-        </article>
-        <article>
-            <h2>Aliquid perspiciatis esse sint.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Saepe assumenda odit maiores nulla velit nisi eius enim harum voluptas iste? Odit quas alias qui, veniam fugiat dolorem consequatur aliquid! Obcaecati saepe ullam mollitia repellat quia, rem iure quam.</p>
-        </article>
-        <article>
-            <h2>Voluptates assumenda accusamus et?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Soluta quis delectus nam dolores nostrum omnis adipisci reiciendis recusandae, atque animi illo praesentium labore perferendis numquam quisquam et. Ad laborum iusto quo deserunt, velit quaerat recusandae impedit expedita itaque?</p>
-        </article>
+    
     </div>
 
     </main>
