--- a/projects/index.html
+++ b/projects/index.html
@@ -8,19 +8,13 @@
     <link rel="stylesheet" href="../style.css">
     <script src="../global.js" type="module"></script>
     <script src="projects.js" type="module"></script>
-
-
 </head>
 <body>
     <header></header>
 
-    </main>
-
-    <h1>My Projects</h1>
-    <div class="projects">
-    
-    </div>
-
+    <main>
+        <h1 class="projects-title">Projects</h1>
+        <div class="projects"></div>
     </main>
 </body>
 </html>
