--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Banff: Personal site and Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="global.js" type="module"></script>
+    <script src="index.js" type="module" defer></script>
+
 </head>
 <body>
     <header></header>
@@ -15,6 +17,12 @@
         <h1>Banff Jiang</h1> 
         <p>Welcome to my page! I am currently a third year at the University of California, San Diego, studying Data Science.</p>   
         <img src="images/photo.jpeg" alt="Sunset during trip to Hawaii this summer" />
+        <div class="projects"></div>
+        
+            <h2>Latest Projects</h2>
+            <div class="projects">
+                <!-- Dynamically added content will appear here -->
+            </div>
     </main>
 </body>
 </html>
