--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style.css">
     <script src="../global.js" type="module"></script>
     <script src="projects.js" type="module"></script>
+    <script src="../index.js" type="module"></script>
 </head>
 <body>
     <header></header>
