--- a/projects/index.html
+++ b/projects/index.html
@@ -15,6 +15,13 @@
     <main>
         <h1 class="projects-title">Projects</h1>
         <div class="projects"></div>
+
+        <svg id="projects-plot" viewBox="-50 -50 100 100">
+            <circle cx="0" cy="0" r="50" fill="red" />
+        </svg>
     </main>
+    </main>
+
+    
 </body>
 </html>
