--- a/projects/index.html
+++ b/projects/index.html
@@ -16,9 +16,9 @@
         <h1 class="projects-title">Projects</h1>
         <div class="projects"></div>
 
-        <svg id="projects-plot" viewBox="-50 -50 100 100">
-            <path d="M -50 0 A 50 50 0 0 1 50 0 A 50 50 0 0 1 -50 0" fill="red" />
-        </svg>
+        <svg id="projects-plot" viewBox="-50 -50 100 100"></svg>
+        
+        <ul class="legend"></ul>
     </main>
     </main>
 
