--- a/projects/index.html
+++ b/projects/index.html
@@ -13,14 +13,14 @@
     <header></header>
 
     <main>
+        <div class="container">
+            <svg id="projects-plot" viewBox="-50 -50 100 100" width="400" height="400"></svg>
+
+            <ul class="legend"></ul>
+        </div>
+
         <h1 class="projects-title">Projects</h1>
         <div class="projects"></div>
-
-        <svg id="projects-plot" viewBox="-50 -50 100 100" width="400" height="400"></svg>
-        <ul class="legend"></ul>
     </main>
-    </main>
-
-    
 </body>
 </html>
