--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@
 
         <h1 class="projects-title">Projects</h1>
         <div class="container">
-            <svg id="projects-plot" viewBox="-50 -50 100 100" width="400" height="400"></svg>
+            <svg id="projects-plot" viewBox="-50 -50 100 100"></svg>
 
             <ul class="legend"></ul>
         </div>
