--- a/meta/index.html
+++ b/meta/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meta</title>
+    <link rel="stylesheet" href="../style.css">
+    <script src="../global.js" type="module"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="main.js" type="module"></script>
+
+
+
 </head>
 <body>
-    
+    <div id="stats"></div>
 </body>
 </html>
